--- a/ChinaWatchers_Dashboard.Rmd
+++ b/ChinaWatchers_Dashboard.Rmd
@@ -49,7 +49,7 @@ Please explore each tabs to find out more:
 
 2. Yearly Investments by Categories - What is China investing in? 
 
-3. Outgoing FDI - Is China really investing more than the US? 
+3. Rising Outflows - Is China really investing more than the US? 
 
 4. Next Frontier: Africa - What do we know about how China is investing in Africa?
 
