--- a/ChinaWatchers_Dashboard.Rmd
+++ b/ChinaWatchers_Dashboard.Rmd
@@ -627,7 +627,7 @@ Is China really investing more than the US?
 
 This segment displays line graphs of US and China both seen FDI outflows over the years. Notably, however, one can note how China's rise in FDI outflows have mostly been linear, while the US' seem to fluctuate over time.
 
-Additionally, we can clearly see that China's volume foreign direct investments, as a percentage of their GDP, has recently overtaken that of the United States'. 
+Additionally, we can clearly see that China's volume foreign direct investments, as a percentage of their GDP, which seems to be overtaking the United States' in recent years. 
 
 ### China's Rising FDI Outflows
 
